refactor: coupleId 필드 완전 제거 - AccountBook 단일화
변경사항:
- Expense, Income, RecurringExpense 엔티티에서 coupleId 필드 제거
- ExpenseResponse, IncomeResponse, RecurringExpenseResponse DTO에서 coupleId 제거
- Service 레이어에서 coupleId 동적 추출 코드 제거
- RecurringExpenseRepository에서 @Deprecated 쿼리 메서드 5개 제거
- DB 마이그레이션: V15__Remove_couple_id_columns.sql 추가
  - expenses.couple_id 컬럼 및 인덱스 제거
  - incomes.couple_id 컬럼 및 인덱스 제거
  - recurring_expenses.couple_id 컬럼 및 인덱스 제거

영향:
- 개발 기간이므로 하위 호환성 불필요
- AccountBook이 유일한 Single Source of Truth로 확립
- API Response에서 coupleId 필드 완전 제거
- 데이터 정합성 향상 (중복 필드 제거)

주의사항:
- Supabase SQL Editor에서 V15 마이그레이션 수동 실행 필요
- 기존 couple_id 데이터는 영구 손실 (개발 단계이므로 문제없음)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>